Resolved issue where section anchors went behind fixed header

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -28,6 +28,11 @@ li {
   margin: 40px 0 40px 0;
 }
 
+.anchor {
+  padding-top: 100px;
+  margin-top: -100px;
+}
+
 /* MAIN NAV */
 
 .main-nav {
@@ -88,17 +93,11 @@ li {
   color: red;
 }
 
-/* HEADER */
-
-header {
-  margin-bottom: 150px;
-}
-
 /* DEFENDER-TEXT-BOX */
 
 .defender-text-box {
   margin: 50px;
-
+  margin-top: 150px;
   display: flex;
   justify-content: center;
   flex-direction: column;
